# checkers

./: .clang_complete  .travis.yml  CMakeLists.txt  README.md  contributors.txt
include/: board.hpp  config.hpp  config.hpp.in  player.hpp  shader.hpp  writer.hpp
include/board/: board.hpp  position.hpp
include/io/: file-writer.hpp
include/players/: player.hpp
include/utilities/: coordinate.hpp
shaders/: fs1.fs  vs1.vs
source/: board.cpp  checkers.cpp  console_writer.cpp  main.cpp  player.cpp  shader.cpp
source/board/: board.cpp  position.cpp
source/io/: file-writer.cpp
source/players/: player.cpp
source/utilities/: coordinate.cpp
test/: board_test.cpp  player_test.cpp  setup.cpp
test/utilities/: coordinate_test.cpp
